--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             </div>
         </div>
         <div class="col-11">
-            <a href="https://x.com/DULOPrays" target="_blank">twitter</a>
-            <a href="https://dexscreener.com/solana/9o8uslbsn8jmf8eg91uoy1nniz6oyxnqg8r6rk7lfzdn" target="_blank">dexscreener</a>
-            <a href="https://t.me/plutopurgatory" target="_blank">telegram</a>
+            <a href="https://x.com/DuloSol" target="_blank">twitter</a>
+            <a href="https://dexscreener.com/solana/7NTVcwbVyfn49JqMpc7SncpwfXfS6gFNW8gGfWfepump" target="_blank">dexscreener</a>
+            <a href="https://t.me/DuloSol" target="_blank">telegram</a>
 
         </div>
     </div>
@@ -111,9 +111,9 @@
                 <a href="/">$DULO</a>
             </div>
             <div class="col-auto d-none d-lg-block">
-                <a href="https://dexscreener.com/solana/9o8uslbsn8jmf8eg91uoy1nniz6oyxnqg8r6rk7lfzdn" target="_blank"><span><img src="assets/img/dexscanner.svg" alt="" width="24px" class="me-3"></span>Pump.fun</a>
-                <a href="https://x.com/DULOPrays" target="_blank"><span><img src="assets/img/twitter.svg" alt="" width="24px" class="me-3"></span>Twitter</a>
-                <a href="https://t.me/plutopurgatory" target="_blank"><span><img src="assets/img/telegram.svg" alt="" width="24px" class="me-3"></span>Telegram</a>
+                <a href="https://dexscreener.com/solana/7NTVcwbVyfn49JqMpc7SncpwfXfS6gFNW8gGfWfepump" target="_blank"><span><img src="assets/img/dexscanner.svg" alt="" width="24px" class="me-3"></span>Pump.fun</a>
+                <a href="https://x.com/DuloSol" target="_blank"><span><img src="assets/img/twitter.svg" alt="" width="24px" class="me-3"></span>Twitter</a>
+                <a href="https://t.me/DuloSol" target="_blank"><span><img src="assets/img/telegram.svg" alt="" width="24px" class="me-3"></span>Telegram</a>
 
             </div>
             <div class="col-auto d-none d-lg-block">
